# explore-python

concurrent_execution/multiprocessing/: demo.py  intro.py  pool.py  pool_map.py  pool_starmap.py  shared_resource.py
concurrent_execution/threading/: demo.py  demo2.py
data_types/enum/: Enum.ipynb  demo.ipynb  utils.ipynb
decorators/: access_control.py  authen.py  cache.py  cache_with_expiry.py  foo.py  logging.py  memory_usage.py  rate_limit.py  retry.py  singleton.py  timer.py  validate_types.py
dev_tools/type_hints/: Any_type.py  NewType.py  TypeVar.ipynb  demo.py
file_formats/configparser/: example.ini  override.ini  override_config.py  read_config.py  write_config.py
functional_programming/functools/: memoize.py  partial.py  partial_func.py  single_dispatch.ipynb
functions/: function_attributes.py  keyword_only_parameters.py  positional_only_parameters.py
fundamentals/: nonlocal_var.py  var_scope_rules.ipynb
fundamentals.py/: nonlocal_var.py
logging/: basic.ipynb  log_vars.py
networking/httpx_module/: intro.py  (+1 more)
package/calculator/: .gitignore  README.md  main.py  pyproject.toml
package/calculator/src/calculator/: calculator.py
package/fastapi_service/: README.md  pyproject.toml
package/fastapi_service/src/fastapi_service/: __init__.py  main.py
package/fastapi_service/src/fastapi_service/api/: routes.py
package/fastapi_service/tests/: test_routes.py
package/weather_cli/: .gitignore  README.md  pyproject.toml
package/weather_cli/src/weather_cli/: cli.py  weather.py
package/weather_cli/tests/: test_weather.py
(+14 files in other folders)
