[project]
name = "calculator"
version = "0.1.0"
description = "A simple calculator package example."
readme = "README.md"
authors = [
    { name = "haongnd2280", email = "hao.ngnd2285@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
calculator = "calculator:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
