[project]
name = "fastapi-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "haongnd2280", email = "hao.ngnd2285@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn"
]

[project.scripts]
fastapi-service = "fastapi_service.main:start"      # Register `fastapi-service` as a CLI command

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
