[project]
name = "weather-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "haongnd2280", email = "hao.ngnd2285@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "requests",
    "click"
]

[project.scripts]
weather = "weather_cli.cli:weather"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
